--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -12,3 +12,12 @@
 
 <%= link_to 'Edit', edit_game_path(@game) %> |
 <%= link_to 'Back', games_path %>
+
+
+<%= form_for @game.guesses.build, url: game_guesses_path(@game) do |f| %>
+<p>
+  <strong>Guess:</strong>
+  <%= f.number_field :number %>
+  <%= f.submit %>
+ <p>
+<% end %>
